# autoware.universe

planning/autoware_planning_validator/: CMakeLists.txt  README_Trajectory_Transformer.md  package.xml
planning/autoware_planning_validator/include/autoware/planning_validator/: trajectory_msg_transformer.hpp  trajectory_transform.hpp  trajectory_transform_template.hpp
planning/autoware_planning_validator/launch/: planning_trajectory_transform.launch.xml  planning_validator.launch.xml
planning/autoware_planning_validator/src/: trajectory_msg_transformer.cpp  trajectory_transform.cpp
